[project]
name = "basicsr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "addict>=2.4.0",
    "future>=1.0.0",
    "ipykernel>=6.30.1",
    "lmdb>=1.7.3",
    "matplotlib>=3.9.4",
    "numpy>=1.17",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-image>=0.24.0",
    "scipy>=1.13.1",
    "tb-nightly>=2.21.0a20251014",
    "torch>=1.7",
    "torchmetrics>=1.8.2",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.2",
    "yapf>=0.43.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
